--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@
     @apply box-border;
   }
   body {
-    @apply !overflow-x-hidden text-lg font-medium;
+    @apply !overflow-x-hidden text-lg font-bold bg-gray-900 text-white;
     margin: 0;
   }
   body[style] {
@@ -20,31 +20,31 @@
   }
   input,
   textarea {
-    @apply bg-gray-200 px-4 py-2 text-base font-normal focus:outline-none focus:ring-2 focus:ring-blue-500;
+    @apply bg-gray-800 px-4 py-2 text-base font-bold focus:outline-none focus:ring-2 focus:ring-blue-500 text-white;
   }
 
   h1 {
-    @apply text-4xl font-normal text-gray-700 sm:text-6xl;
+    @apply text-4xl font-extrabold text-white sm:text-6xl;
   }
 
   h2 {
-    @apply text-4xl font-semibold sm:text-6xl;
+    @apply text-4xl font-bold sm:text-6xl;
   }
 
   .subheading {
-    @apply block text-lg sm:text-xl;
+    @apply block text-lg sm:text-xl font-bold;
   }
 
   h3 {
-    @apply text-xl;
+    @apply text-xl font-bold;
   }
 
   p {
-    @apply text-base leading-normal;
+    @apply text-base leading-normal font-medium;
   }
 
   label {
-    @apply mb-2 font-medium;
+    @apply mb-2 font-bold;
   }
 }
 
@@ -182,3 +182,19 @@ footer {
   --blink-text-secondary: #666666;
   --blink-border-radius-rounded-xl: 0.5rem;
 } */
+
+/* Add this at the end of the file */
+.wallet-adapter-button {
+  background-color: black !important;
+  color: white !important;
+  border-radius: 0.375rem !important; /* This is equivalent to rounded-md in Tailwind */
+  font-weight: bold !important;
+}
+
+.wallet-adapter-button:hover {
+  background-color: #1a1a1a !important; /* Slightly lighter black on hover */
+}
+
+.wallet-adapter-button-trigger {
+  background-color: black !important;
+}
